Cambios en css(agregue sombras) y html(correction de cantida --> cantidad)

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
     <div class="container-principal">
             <div id="imagen"> <img src="../Divisas/imagen/2810888.png" alt=""> </div>
-            <div id="cantidad-dinero">Cantida de Dinero</div>
+            <div id="cantidad-dinero">Cantidad de Dinero</div>
             <div id="elige-moneda1">Elige tu moneda</div>
             <div id="elige-moneda2">Elige tu moneda</div>
             <div id="convertir">Convertir</div>
