entrega fianl del App divisas

--- a/index.html
+++ b/index.html
@@ -1,44 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../Divisas/styles/styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../Divisas/styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@1,100&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Mitr&display=swap" rel="stylesheet">
     <title>Divisas</title>
-</head>
-<body>
+  </head>
+  <body>
     <script src="../Divisas/script/script.js"></script>
-    
-    <div class="container-principal">
-            <div id="imagen"> <img src="../Divisas/imagen/2810888.png" alt=""> </div>
-                <form>
-                    <input id="cantidad-dinero" placeholder="Ingresar cantidad a cambiar">
-                    <!--<input id="elige-moneda1" placeholder="Elige tu moneda">-->
-                    <!-- The second value will be selected initially -->
-                    <select id="elige-moneda1" name="select">
-                        <option value="value1">Dolar</option>
-                        <option value="value2">Cop</option>
-                        <option value="value3">Mex</option>
-                        <option value="value1">Euro</option>
-                        <option value="value2">Pound</option>   
-                    </select>
-                    <select id="elige-moneda2" name="select">
-                        <option value="value1">Dolar</option>
-                        <option value="value2">Cop</option>
-                        <option value="value3">Mex</option>
-                        <option value="value1">Euro</option>
-                        <option value="value2">Pound</option>   
-                    </select>
-  
-                    <!--<input id="elige-moneda2" placeholder="Elige tu moneda">-->
-                </form>
-            <div id="convertir"><button onClick="calculate()" >Convertir</button></div>
-        </div>
-  
-</body>
-</html>
 
+    <div class="container-principal">
+      <div id="imagen"><img src="../Divisas/imagen/2810888.png" alt="" /></div>
+      <form>
+        <input type="number" id="cantidad-dinero" placeholder="Ingresar cantidad a cambiar" />
+        <!--<input id="elige-moneda1" placeholder="Elige tu moneda">-->
+        <!-- The second value will be selected initially -->
+        <select id="elige-moneda1" name="select">
+            <option  value="elegir">Divisa Origen</option>
+            <option  value="usd">USD</option>
+            <option  value="cop">COP</option>
+            <option  value="mex">MEX</option>
+            <option  value="euro">EUR</option>
+            <option  value="pound">POUND</option>
+        </select>
+        <select id="elige-moneda2" name="select">
+            <option  value="elegir">Divisa Destino</option>
+            <option  value="usd">USD</option>
+            <option  value="cop">COP</option>
+            <option  value="mex">MEX</option>
+            <option  value="euro">EUR</option>
+            <option  value="pound">POUND</option>
+        </select>
+        <input id="resultado" placeholder="Resultado" />
+        <!--<input id="elige-moneda2" placeholder="Elige tu moneda">-->
+      </form>
+      <div id="convertir">
+        <button onclick="convertorDivisas()">Convertir</button>
+      </div>
+    </div>
+  </body>
+</html>
+.
