correccion rutas de estilos y java

--- a/index.html
+++ b/index.html
@@ -4,17 +4,17 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../Divisas/styles/styles.css" />
+    <link rel="stylesheet" href="./styles/styles.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Mitr&display=swap" rel="stylesheet">
     <title>Divisas</title>
   </head>
   <body>
-    <script src="../Divisas/script/script.js"></script>
+    <script src="./script/script.js"></script>
 
     <div class="container-principal">
-      <div id="imagen"><img src="../Divisas/imagen/2810888.png" alt="" /></div>
+      <div id="imagen"><img src="./imagen/2810888.png" alt="" /></div>
       <form>
         <input type="number" id="cantidad-dinero" placeholder="Ingresar cantidad a cambiar" />
         <!--<input id="elige-moneda1" placeholder="Elige tu moneda">-->
@@ -35,7 +35,7 @@
             <option  value="euro">EUR</option>
             <option  value="pound">POUND</option>
         </select>
-        <input id="resultado" placeholder="Resultado" />
+        <input id="resultado" placeholder="Resultado" readonly/>
         <!--<input id="elige-moneda2" placeholder="Elige tu moneda">-->
       </form>
       <div id="convertir">
